--- a/vignettes/lastools.bib
+++ b/vignettes/lastools.bib
@@ -1,8 +1,10 @@
 
 @ARTICLE{reeves,
- author    = "David Firth",
+ year = {1999},
+ author    = "Firth, D.",
+ editor = "Elkington, P.",
  title     = "Log Analysis for Mining Applications",
- publisher = "Reeves"
+ publisher = "Reeves Wireline Services"
 }
 
 @online{las_preamble,
